[gd_scene load_steps=3 format=3 uid="uid://nbcghue8n5ka"]

[ext_resource type="Texture2D" uid="uid://dli2r2a6colee" path="res://assets/Weapons/pixil-frame-0.png" id="1_lfxg6"]
[ext_resource type="Script" path="res://scripts/button_main.gd" id="2_3brsj"]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(16, 16)
anchors_preset = -1
anchor_right = 0.156
anchor_bottom = 0.208
offset_right = 0.159996
offset_bottom = 0.159996
texture_normal = ExtResource("1_lfxg6")
texture_pressed = ExtResource("1_lfxg6")
texture_hover = ExtResource("1_lfxg6")
texture_disabled = ExtResource("1_lfxg6")
texture_focused = ExtResource("1_lfxg6")
stretch_mode = 0
script = ExtResource("2_3brsj")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
